[package]
name = "calendar"
version = "0.2.0"
edition = "2021"

[lib]
name = "calendar_lib"
path = "src/lib.rs"

[[bin]]
name = "calenda-rs"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
chrono = { version = "0.4.20", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
icalendar = {version = "0.11", features = ["parser"] }
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
